[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["carlesoctav <carlesoctavianus@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlmodel = "^0.0.22"
httpx = "^0.27.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
uvicorn = "^0.32.0"
sqlalchemy-libsql = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
